[workspace]
members = [
    "choochoos-abi",
    "choochoos-api",
    "choochoos-kernel",
    "ts7200",

    "userspace/",
    "userspace/shared/nameserver",
    "userspace/distros/k1",
    "userspace/distros/k2",
]

[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"

[profile.dev]
debug = true
panic = "abort"
