[workspace]
members = [
    "choochoos",
    "choochoos-abi",
    "choochoos-kernel",
    "choochoos-platform-ts7200",

    "ts7200",

    "distros/extern_userspace",
    "distros/k1",
    "distros/k2",
    "distros/ns_test",
]

[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"

[profile.dev]
# opt-level = 1
debug = true
panic = "abort"

# Always build core packages in release mode.
# Due to a cargo bug, a bunch of "dependency not found" warnings are emitted,
# but these flags do in-fact work as intended.

[profile.dev.package.compiler_builtins]
opt-level = 2

[profile.dev.package.core]
opt-level = 2

[profile.dev.package.rustc-std-workspace-core]
opt-level = 2

[profile.dev.package.alloc]
opt-level = 2
