[package]
name = "choochoos-kernel"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[features]
default = ["platform-ts7200"]

# ==== core kernel features ==== #
heap = ["linked_list_allocator"]
kdebug = []

# ==== Platform Support ==== #
platform-ts7200 = ["ts7200", "choochoos-platform-ts7200"]

# ==== Hacks ==== #
# sets the initial link-register of a task to point to the Exit() syscall.
legacy-implicit-exit = []
# use the virtual UART3 for kernel busy-wait logging
platform-ts7200-emulated = []

[dependencies]
abi = { package = "choochoos-abi", path = "../choochoos-abi" }

# ==== Common Dependencies ==== #
bit_field = "0.10"
bstr = { version = "0.2.14", default-features = false }
# armv4t doesn't support atomic operations, so the "cas" feature must be disabled
heapless = { version = "0.5", default-features = false }
owo-colors = "1.1"

# ==== Optional Dependencies ==== #
# Heap allocation isn't actually being used in the kernel
linked_list_allocator = { version =  "0.8", default-features = false, optional = true }

# ==== Platform Specific Dependencies ==== #
# platform-ts7200
ts7200 = { path = "../ts7200", optional = true }
choochoos-platform-ts7200 = { path = "../choochoos-platform-ts7200", optional = true }
