[package]
name = "userspace"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[lib]
name = "userspace"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
k1 = { optional = true, path = "distros/k1" }
k2 = { optional = true, path = "distros/k2" }

nameserver = { path = "shared/nameserver" }

owo-colors = "1.1"

choochoos-api = { path = "../choochoos-api" }
ts7200 = { path = "../ts7200" }
