[package]
name = "nameserver"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[dependencies]
# It'd be nice to directly depend on the `choochoos` library, we can't, as that
# would result in a cyclic dependency. As such, we have to manually import the
# syscall crate directly.
syscall = { path = "../syscall" }

heapless = { version = "0.5", default-features = false }
