[package]
name = "nameserver"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[features]
# default = ["using-raw-sys"]
default = ["using-serde"]
using-serde = ["serde-srr", "serde"]
using-raw-sys = []

[dependencies]
# It'd be nice to directly depend on the `choochoos` library, we can't, as that
# would result in a cyclic dependency. As such, we have to manually import the
# syscall crate directly.
syscall = { path = "../syscall" }

cfg-if = "1.0"
heapless = { version = "0.5", default-features = false }

# ==== serde-srr implementation ==== #
serde = { optional = true, version = "1.0.117", default-features = false, features = ["derive"] }
serde-srr = { optional = true, path = "../serde-srr" }
