[package]
name = "serde-srr"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[dependencies]
syscall = { path = "../syscall" }

serde = { version = "1.0.117", default-features = false, features = ["derive"] }

heapless = { version = "0.5", default-features = false }

    [dependencies.postcard]
    # TODO: switch to crates.io once jamesmunns/postcard#30 is included in a release
    git = "https://github.com/jamesmunns/postcard.git"
    rev = "e9b7a89"
    default-features = false
    features = ["heapless"]
